# JavaScript_pi

./: CMakeLists.txt  README.md
.circleci/: config.yml
cmake/: PluginLibs.cmake
libs/scintilla/: CMakeLists.txt
src/: JSExtensions.cpp  JavaScript_pi.cpp  JavaScript_pi.h  JavaScriptgui_impl.h  icons.cpp
